<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- comments -->
    <string name="app_name">健康管理系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">保存</string>
    <string name="tab_bluetooth">我的状态</string>
    <string name="tab_data_center">历史数据</string>
    <string name="tab_personal">个人中心</string>
    <string name="select">选择</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    
    <!-- 注册页面 -->
    <string name="user_name">用户名：</string>
    <string name="user_password">密	码：</string>
    <string name="user_password_again">重新输入：</string>
    <string name="user_sex">性	别：</string>
    <string name="user_age">年	龄：</string>
    <string name="user_phone">电	话：</string>
    <string name="user_weight">体  重：</string>
    
    <string name="camera">拍照</string>
    <string name="gallery">从相册选取</string>
    <string name="user_name_used">*用户名已被使用</string>
    <string name="edit_passwod">请输入密码</string>
    <string name="password_no_same">密码不一致</string>
    <string name="no_phone">请输入正确电话号码</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="user_image">http://localhost:8080/HealthServer/image/1458645324124.jpg</string>
    <string name="high_xueya">高血压病应注意饮食原则 1、饮食有节：做到定时定量、不可过饥过饱，暴饮暴食。各种食物搭配合理，不可偏食。 2、低盐饮食：每日进盐控制在2－5克以内。因为食盐能使小动脉痉挛，血压升高，并促使肾小动脉硬化过程加快。食盐过多，还容易使水钠在体内潴而引起水肿。 3、多食新鲜菜和瓜果等富含维生素b、维生素的c的食物。如豆芽、瓜果、海带、紫菜、木耳等。 4、多食具有降压作用的食品，如大蒜、芹菜、荠菜、绿豆、玉米、胡萝卜、菊花、葫芦、西瓜、海带、海参、海蜇等。 5、忌烟，香烟中的尼古丁，能刺激心脏和血管，使血压升高，加速动脉粥样硬化的形成。 6、少食动物脂肪、不食动物内脏等。少吃甜食，吃低热量、低脂肪、低胆固醇食物。 7、少吃动物性蛋白、多吃植物性蛋白、如豆类及豆制品。动物蛋白应多吃海鲜、鱼类。如海参、海蜇及某些鱼类，不仅能提供人体所需的蛋白质，而且还具有一定的降压的作用。 8、少量喝茶和适量饮酒。茶叶中含有少量茶碱、黄嘌呤，其利尿作用对治疗高血压病有利。茶叶中的维生素等能防止动脉硬化。但饮茶过多又会引起兴奋不安、失眠、心悸。故不可多饮。少量饮用低度酒如啤酒、葡萄酒、黄酒等，可扩张血管，活血通络。但忌饮烈性酒，更不能酗酒。 总之，高血压病人的饮食以清淡为主，宁素勿荤，宁淡勿浓，宁饥勿饱，生活上做到调情志，益肾精，慎饮食。</string>
    <string name="low_xueya">1.晚上睡觉将头部垫高,可减轻低血压症状 2.锻炼身体,增强体质.平时养成运动的习惯,均衡的饮食,培养开朗的个性,保证足够的睡眠,规律正常的生活. 3.早上起床时,应缓慢地改变体位,防止血压突然下降,起立时不能突然,要转身缓缓而起,肢体屈伸动作不要过猛过快,例如提起,举起重物或排便后起立动作都要慢些.洗澡水温度不宜过热,过冷,因为热可使血管扩张而降低血压,冷会刺激血管而增高血压.常淋浴以加速血液循环,或以冷水,温水交替洗足.对有下肢血管曲张的老人尤宜穿用有弹性的袜子,紧身裤或绷带,以加强静脉回流.体格瘦小者应每天多喝水以便增加血容量. 4.不要在闷热或缺氧的环境中站立过久,以减少发病.低血压患者轻者如无任何症状,无需药物治疗.重者伴有明显症状,必须给予积极治疗,改善症状,提高生活质量,防止严重危害发生.</string>
	<string name="fast_bleed">呼吸过快综合症是指由于呼吸过快引起的一系列症状。传统观念认为，焦虑等因素诱发了呼吸过快。呼吸过快综合症涉及呼吸、循环、神经、精神和心理方面，表现为气短、憋气、呼吸困难、胸部不适或胸痛、呼吸深或快，心慌或心悸，头昏、视物模糊、手指针刺麻木感、手指上肢强直、口唇周围麻木发紧和晕厥，精神紧张或焦虑，恐惧等。这些所谓的身心症状不伴有相应的器质性病因。症状的发生与自主呼吸调节异常有关。当患者的呼吸受到刺激时，呼吸调节功能发生一过性紊乱(脑干以上的高位神经结构如下丘脑对呼吸的调节功能过强)，出现呼吸过快。</string>
    <string name="low_bleed">呼吸浅慢是重症呼吸衰竭所表现出来的一种症状。呼吸困难、三凹征明显或反而不明显，呼吸由浅快转为浅慢、节律紊乱，常出现下颌呼吸和呼吸暂停，呼吸音减低，口唇发绀加重，四肢末端发绀、发凉，昏睡或昏迷，甚至惊厥。严重者可出现脑水肿(球结膜水肿或视神经乳头水肿)、脑疝(瞳孔两侧大小不等)等危重改变。</string>
	<string name="fast_xinlv">心率过快可能因为平时缺少运动，运动员的心率一般都会比较慢，此时，你需要的是加强运动。例如：扎马步，四肢平行于地面，两脚敞（大约3、4个脚掌），站完后后你会心跳加速，接着深吸一口气，再闭上眼睛，感觉脑子一片宽敞，甚至能感觉到太阳穴，接着想着自己喜欢的梦（幻想），然后漫漫的呼出气，很轻、很自然，甚至感觉不到自己在呼吸，最后，漫漫的，你会觉得很镇定。</string>
	<string name="low_xinlv">1、病因治疗。对体质虚弱者要加强营养;对患有肺结核等消耗性疾病者要加紧治疗;因药物引起者可停用或调整用药剂量。如高血压患者服降压药后血压下降过快而感到不适时，应在医生指导下调整给药方法和剂量，或根据需要改用温和的降压药如复方降压片、心痛定或中药等，必要时可停用降压药;对体位性低血压患者，由卧位站立时注意不要过猛，或以手扶物，以防因低血压引起摔跤等。2、适当加强锻炼。生活要有规律，防止过度疲劳，因为极度疲劳会使血压降得更低。要保持良好的精神状态，适当加强锻炼，提高身体素质，改善神经、血管的调节功能，加速血液循环，减少直立性低血压的发作，老年人锻炼应根据环境条件和自己的身体情况选择运动项目，如太极拳、散步、健身操等。</string>
	
</resources>
