<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="请选择"
            android:textColor="#999999" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#eaeaea" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/camera"
            android:textColor="@color/blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#eaeaea" />

        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/gallery"
            android:textColor="@color/blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#eaeaea" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/blue" />
    </LinearLayout>

</LinearLayout>